# tiny-textmate

./: .gitignore  NOTES.md  README.md  SCOPES.md  c.txmt.vim  code_pp.c  grammar_to_vim.c  main.c  meson.build  package.c  parser.c  processor.c  reader_cjson.c  resource.c  textmate.c  textmate.h  theme.c
samples/: c.json  cpp.json  cpp.package.json  cpp_test.cpp  enum_struct.c  html.json  if_else.cpp  js.json  markdown.json  markdown.md  math-tag.html  math.html  njk.json  package.c  printf.c  simple.c  syntax.c
src/: code_pp.c  main.c  package.c  processor.c  reader_cjson.c  textmate.c  textmate.h
tests/: c.test.json  cpp.json  dump.c  enum_struct.c  function.c  if_else.c  javascript.json  json.c  list.c  package.c  parser_.c  regex.c  sample.html  simple.c  single_line.c  syntax.c  tests.c  theme.c
tests/data/: comment.c  heading-paragraphs.md  heading-paragraphs.md.spec.json  hello.html.spec.json  hello.vue  hello.vue.spec.json  includes.md  includes.md.spec.json  javascript.js  javascript.js.spec.json  main.c  main.c.spec.json  math.html  math.html.spec.json  page-list.njk.spec.json  printf.c  printf.c.spec.json  tinywl.c
tests/data/extensions/ahmadawais.shades-of-purple-6.13.0/: package.json
tests/data/extensions/eseom.nunjucks-template-0.5.1/: package.json
tests/data/extensions/github.github-vscode-theme-6.0.0/: package.json
tests/data/extensions/octref.vetur-0.35.0/: package.json
tests/data/extensions/pkief.material-icon-theme-4.10.0/: package.json
